--- a/Count.csproj
+++ b/Count.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\VampireLordController.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Models\Location.cs" />
     <Compile Include="Models\VampireLord.cs" />
