--- a/Count.csproj
+++ b/Count.csproj
@@ -41,14 +41,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\VampireLordController.cs" />
+    <Compile Include="Controllers\VillageController.cs" />
+    <Compile Include="Controllers\WorldController.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Models\Location.cs" />
+    <Compile Include="Models\Vampire.cs" />
     <Compile Include="Models\VampireLord.cs" />
+    <Compile Include="Models\Villager.cs" />
     <Compile Include="Models\World.cs" />
     <Compile Include="Models\Village.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\ListUtil.cs" />
+    <Compile Include="Utils\LocationUtil.cs" />
     <Compile Include="Utils\Randomizer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
