--- a/Count.csproj
+++ b/Count.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Controllers\VampireLordController.cs" />
     <Compile Include="Controllers\FollowersController.cs" />
     <Compile Include="Controllers\VillageController.cs" />
+    <Compile Include="Controllers\RegionController.cs" />
     <Compile Include="Controllers\WorldController.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Models\Followers\Zombie.cs" />
@@ -51,6 +52,7 @@
     <Compile Include="Models\Followers\Vampire.cs" />
     <Compile Include="Models\VampireLord.cs" />
     <Compile Include="Models\Villager.cs" />
+    <Compile Include="Models\Region.cs" />
     <Compile Include="Models\World.cs" />
     <Compile Include="Models\Village.cs" />
     <Compile Include="Program.cs" />
