--- a/Count.csproj
+++ b/Count.csproj
@@ -40,26 +40,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controllers\Base\LocationObjectController.cs" />
+    <Compile Include="Controllers\LocationObjectController.cs" />
+    <Compile Include="Controllers\LocationObjects\GraveyardController.cs" />
     <Compile Include="Controllers\VampireLordController.cs" />
-    <Compile Include="Controllers\Base\FollowerController.cs" />
-    <Compile Include="Controllers\CastleController.cs" />
-    <Compile Include="Controllers\VillageController.cs" />
+    <Compile Include="Controllers\FollowerController.cs" />
+    <Compile Include="Controllers\LocationObjects\CastleController.cs" />
+    <Compile Include="Controllers\LocationObjects\VillageController.cs" />
     <Compile Include="Controllers\RegionController.cs" />
     <Compile Include="Controllers\WorldController.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Models\Followers\Cultist.cs" />
     <Compile Include="Models\Followers\Zombie.cs" />
-    <Compile Include="Models\Base\LocationObject.cs" />
+    <Compile Include="Models\LocationObject.cs" />
     <Compile Include="Models\Location.cs" />
     <Compile Include="Models\Follower.cs" />
     <Compile Include="Models\Followers\Vampire.cs" />
+    <Compile Include="Models\LocationObjects\Castle\ResearchItem.cs" />
+    <Compile Include="Models\LocationObjects\Graveyard.cs" />
     <Compile Include="Models\VampireLord.cs" />
-    <Compile Include="Models\Castle.cs" />
+    <Compile Include="Models\LocationObjects\Castle\Castle.cs" />
     <Compile Include="Models\Villager.cs" />
     <Compile Include="Models\Region.cs" />
     <Compile Include="Models\World.cs" />
-    <Compile Include="Models\Village.cs" />
+    <Compile Include="Models\LocationObjects\Village.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\LocationUtil.cs" />
