--- a/Count.csproj
+++ b/Count.csproj
@@ -44,13 +44,16 @@
     <Compile Include="Controllers\Followers\ZombieController.cs" />
     <Compile Include="Controllers\Followers\VampireController.cs" />
     <Compile Include="Controllers\HeroController.cs" />
+    <Compile Include="Controllers\Heroes\FighterController.cs" />
     <Compile Include="Controllers\LocationObjectController.cs" />
+    <Compile Include="Controllers\LocationObjects\FriendlyLocationController.cs" />
+    <Compile Include="Controllers\LocationObjects\EnemyLocationController.cs" />
     <Compile Include="Controllers\LocationObjects\UnexploredController.cs" />
-    <Compile Include="Controllers\LocationObjects\GraveyardController.cs" />
+    <Compile Include="Controllers\LocationObjects\Friendly\GraveyardController.cs" />
     <Compile Include="Controllers\VampireLordController.cs" />
     <Compile Include="Controllers\FollowerController.cs" />
-    <Compile Include="Controllers\LocationObjects\CastleController.cs" />
-    <Compile Include="Controllers\LocationObjects\VillageController.cs" />
+    <Compile Include="Controllers\LocationObjects\Friendly\CastleController.cs" />
+    <Compile Include="Controllers\LocationObjects\Enemy\VillageController.cs" />
     <Compile Include="Controllers\RegionController.cs" />
     <Compile Include="Controllers\WorldController.cs" />
     <Compile Include="Enums\FeedStatus.cs" />
@@ -77,7 +80,6 @@
     <Compile Include="Utils\Randomizer.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Controllers\Heroes\" />
     <Folder Include="Models\Heroes\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
