--- a/Count.csproj
+++ b/Count.csproj
@@ -41,46 +41,50 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controllers\Followers\ZombieController.cs" />
-    <Compile Include="Controllers\Followers\VampireController.cs" />
-    <Compile Include="Controllers\HeroController.cs" />
-    <Compile Include="Controllers\Heroes\FighterController.cs" />
     <Compile Include="Controllers\LocationObjectController.cs" />
-    <Compile Include="Controllers\LocationObjects\FriendlyLocationController.cs" />
-    <Compile Include="Controllers\LocationObjects\EnemyLocationController.cs" />
-    <Compile Include="Controllers\LocationObjects\UnexploredController.cs" />
-    <Compile Include="Controllers\LocationObjects\Friendly\GraveyardController.cs" />
+    <Compile Include="Controllers\LocationObjects\Creatures\Followers\ZombieController.cs" />
+    <Compile Include="Controllers\LocationObjects\Creatures\Followers\VampireController.cs" />
+    <Compile Include="Controllers\LocationObjects\Creatures\HeroController.cs" />
+    <Compile Include="Controllers\LocationObjects\Creatures\Heroes\FighterController.cs" />
+    <Compile Include="Controllers\LocationObjects\CreatureController.cs" />
+    <Compile Include="Controllers\LocationObjects\StructureController.cs" />
+    <Compile Include="Controllers\LocationObjects\Structures\FriendlyLocationController.cs" />
+    <Compile Include="Controllers\LocationObjects\Structures\EnemyLocationController.cs" />
+    <Compile Include="Controllers\LocationObjects\Structures\UnexploredController.cs" />
+    <Compile Include="Controllers\LocationObjects\Structures\Friendly\GraveyardController.cs" />
     <Compile Include="Controllers\VampireLordController.cs" />
-    <Compile Include="Controllers\FollowerController.cs" />
-    <Compile Include="Controllers\LocationObjects\Friendly\CastleController.cs" />
-    <Compile Include="Controllers\LocationObjects\Enemy\VillageController.cs" />
+    <Compile Include="Controllers\LocationObjects\Creatures\FollowerController.cs" />
+    <Compile Include="Controllers\LocationObjects\Structures\Friendly\CastleController.cs" />
+    <Compile Include="Controllers\LocationObjects\Structures\Enemy\VillageController.cs" />
     <Compile Include="Controllers\RegionController.cs" />
     <Compile Include="Controllers\WorldController.cs" />
     <Compile Include="Enums\FeedStatus.cs" />
     <Compile Include="GameViewController.cs" />
-    <Compile Include="Models\Followers\Cultist.cs" />
-    <Compile Include="Models\Followers\Zombie.cs" />
+    <Compile Include="Models\Creatures\Followers\Cultist.cs" />
+    <Compile Include="Models\Creatures\Followers\Zombie.cs" />
     <Compile Include="Models\Game.cs" />
-    <Compile Include="Models\Hero.cs" />
+    <Compile Include="Models\Creature.cs" />
+    <Compile Include="Models\Creatures\Hero.cs" />
+    <Compile Include="Models\Structure.cs" />
     <Compile Include="Models\LocationObject.cs" />
     <Compile Include="Models\Location.cs" />
-    <Compile Include="Models\Follower.cs" />
-    <Compile Include="Models\Followers\Vampire.cs" />
-    <Compile Include="Models\LocationObjects\Castle\ResearchItem.cs" />
-    <Compile Include="Models\LocationObjects\Graveyard.cs" />
+    <Compile Include="Models\Creatures\Follower.cs" />
+    <Compile Include="Models\Creatures\Followers\Vampire.cs" />
+    <Compile Include="Models\Structures\Castle\ResearchItem.cs" />
+    <Compile Include="Models\Structures\Graveyard.cs" />
     <Compile Include="Models\VampireLord.cs" />
-    <Compile Include="Models\LocationObjects\Castle\Castle.cs" />
-    <Compile Include="Models\Villager.cs" />
+    <Compile Include="Models\Structures\Castle\Castle.cs" />
+    <Compile Include="Models\Creatures\Villager.cs" />
     <Compile Include="Models\Region.cs" />
     <Compile Include="Models\World.cs" />
-    <Compile Include="Models\LocationObjects\Village.cs" />
+    <Compile Include="Models\Structures\Village.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\LocationUtil.cs" />
     <Compile Include="Utils\Randomizer.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Models\Heroes\" />
+    <Folder Include="Models\Creatures\Heroes\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
