--- a/Count.csproj
+++ b/Count.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>packages\Newtonsoft.Json.12.0.1\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -48,6 +51,7 @@
     <Compile Include="Controllers\LocationObjects\Creatures\Heroes\FighterController.cs" />
     <Compile Include="Controllers\LocationObjects\CreatureController.cs" />
     <Compile Include="Controllers\LocationObjects\StructureController.cs" />
+    <Compile Include="Controllers\LocationObjects\StructureController{T}.cs" />
     <Compile Include="Controllers\LocationObjects\Structures\FriendlyLocationController.cs" />
     <Compile Include="Controllers\LocationObjects\Structures\EnemyLocationController.cs" />
     <Compile Include="Controllers\LocationObjects\Structures\UnexploredController.cs" />
@@ -85,6 +89,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\Creatures\Heroes\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
