--- a/Count.csproj
+++ b/Count.csproj
@@ -64,31 +64,31 @@
     <Compile Include="Controllers\WorldController.cs" />
     <Compile Include="Enums\FeedStatus.cs" />
     <Compile Include="GameViewController.cs" />
-    <Compile Include="Models\Creatures\Followers\Cultist.cs" />
-    <Compile Include="Models\Creatures\Followers\Zombie.cs" />
+    <Compile Include="Models\LocationObjects\Creatures\Followers\Cultist.cs" />
+    <Compile Include="Models\LocationObjects\Creatures\Followers\Zombie.cs" />
     <Compile Include="Models\Game.cs" />
-    <Compile Include="Models\Creature.cs" />
-    <Compile Include="Models\Creatures\Hero.cs" />
-    <Compile Include="Models\Structure.cs" />
+    <Compile Include="Models\LocationObjects\Creature.cs" />
+    <Compile Include="Models\LocationObjects\Creatures\Hero.cs" />
+    <Compile Include="Models\LocationObjects\Structure.cs" />
     <Compile Include="Models\LocationObject.cs" />
     <Compile Include="Models\Location.cs" />
-    <Compile Include="Models\Creatures\Follower.cs" />
-    <Compile Include="Models\Creatures\Followers\Vampire.cs" />
-    <Compile Include="Models\Structures\Castle\ResearchItem.cs" />
-    <Compile Include="Models\Structures\Graveyard.cs" />
+    <Compile Include="Models\LocationObjects\Creatures\Follower.cs" />
+    <Compile Include="Models\LocationObjects\Creatures\Followers\Vampire.cs" />
+    <Compile Include="Models\LocationObjects\Structures\Castle\ResearchItem.cs" />
+    <Compile Include="Models\LocationObjects\Structures\Graveyard.cs" />
     <Compile Include="Models\VampireLord.cs" />
-    <Compile Include="Models\Structures\Castle\Castle.cs" />
-    <Compile Include="Models\Creatures\Villager.cs" />
+    <Compile Include="Models\LocationObjects\Structures\Castle\Castle.cs" />
+    <Compile Include="Models\LocationObjects\Creatures\Villager.cs" />
     <Compile Include="Models\Region.cs" />
     <Compile Include="Models\World.cs" />
-    <Compile Include="Models\Structures\Village.cs" />
+    <Compile Include="Models\LocationObjects\Structures\Village.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\LocationUtil.cs" />
     <Compile Include="Utils\Randomizer.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Models\Creatures\Heroes\" />
+    <Folder Include="Models\LocationObjects\Creatures\Heroes\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
