--- a/Count.csproj
+++ b/Count.csproj
@@ -51,15 +51,16 @@
     <Compile Include="Controllers\LocationObjects\Creatures\Heroes\FighterController.cs" />
     <Compile Include="Controllers\LocationObjects\CreatureController.cs" />
     <Compile Include="Controllers\LocationObjects\StructureController.cs" />
+    <Compile Include="Controllers\LocationObjects\Structures\NeutralLocationController.cs" />
     <Compile Include="Controllers\LocationObjects\Structures\FriendlyLocationController.cs" />
     <Compile Include="Controllers\LocationObjects\Structures\EnemyLocationController.cs" />
-    <Compile Include="Controllers\LocationObjects\Structures\UnexploredController.cs" />
+    <Compile Include="Controllers\LocationObjects\Structures\Neutral\ForestController.cs" />
     <Compile Include="Controllers\LocationObjects\Structures\Friendly\GraveyardController.cs" />
+    <Compile Include="Controllers\PlotController.cs" />
     <Compile Include="Controllers\VampireLordController.cs" />
     <Compile Include="Controllers\LocationObjects\Creatures\FollowerController.cs" />
     <Compile Include="Controllers\LocationObjects\Structures\Friendly\CastleController.cs" />
     <Compile Include="Controllers\LocationObjects\Structures\Enemy\VillageController.cs" />
-    <Compile Include="Controllers\RegionController.cs" />
     <Compile Include="Controllers\WorldController.cs" />
     <Compile Include="Enums\FeedStatus.cs" />
     <Compile Include="GameViewController.cs" />
@@ -74,14 +75,16 @@
     <Compile Include="Models\Location.cs" />
     <Compile Include="Models\LocationObjects\Creatures\Follower.cs" />
     <Compile Include="Models\LocationObjects\Creatures\Followers\Vampire.cs" />
-    <Compile Include="Models\LocationObjects\Structures\Castle\ResearchItem.cs" />
-    <Compile Include="Models\LocationObjects\Structures\Graveyard.cs" />
+    <Compile Include="Models\LocationObjects\Structures\Friendly\Castle\ResearchItem.cs" />
+    <Compile Include="Models\LocationObjects\Structures\Friendly\Graveyard.cs" />
+    <Compile Include="Models\LocationObjects\Structures\Neutral\Forest.cs" />
+    <Compile Include="Models\Plot.cs" />
     <Compile Include="Models\VampireLord.cs" />
-    <Compile Include="Models\LocationObjects\Structures\Castle\Castle.cs" />
+    <Compile Include="Models\LocationObjects\Structures\Friendly\Castle\Castle.cs" />
     <Compile Include="Models\LocationObjects\Creatures\Villager.cs" />
     <Compile Include="Models\Region.cs" />
     <Compile Include="Models\World.cs" />
-    <Compile Include="Models\LocationObjects\Structures\Village.cs" />
+    <Compile Include="Models\LocationObjects\Structures\Enemy\Village.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\LocationUtil.cs" />
